--- a/css/login.css
+++ b/css/login.css
@@ -15,7 +15,7 @@ button:focus {
 
 ::-webkit-input-placeholder {
   color: rgba(255, 255, 255, 0.65);
-}
+}<button type="button" class="signup-btn">Login</button><button type="button" class="signup-btn">Login</button>
 
 ::-webkit-input-placeholder .input-line:focus +::input-placeholder {
   color: #fff;
