Generate the basic HTML layout and structure of Mapambo's services.html page and prepared the script for the cards section that will host the featured stylists

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4955,7 +4955,7 @@ a.badge:focus {
 .nav-pills > li > a > .badge {
   margin-left: 3px;
 }
-.jumbotron {
+.jumbotron .h1 {
   padding-top: 30px;
   padding-bottom: 30px;
   margin-bottom: 30px;
