--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,8 +1,7 @@
 .fa { 
     padding: 10px;
-    /* padding-bottom:0px; */
+    padding-bottom:0px;
     font-size: 30px;
-    /* width: 50px; */
     margin: 5px 2px;
     float: right;
 } 
@@ -33,3 +32,11 @@ h2, h3 {
     text-align: center;
   }
 
+/* .column {
+    color: black;
+}
+
+.subtitle {
+    text-decoration: underline;
+    font-size: 20px;
+} */
