--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -32,9 +32,9 @@ h2, h3 {
     text-align: center;
   }
 
-/* .column {
+.column {
     color: black;
-} */
+}
 
 .subtitle {
     text-decoration: underline;
