--- a/css/services.css
+++ b/css/services.css
@@ -1,3 +1,18 @@
+*{
+  box-sizing:border-box;
+}
+body{
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+background-image: url("/images/bestspa.jpg");
+background-size: cover;
+background-repeat: no-repeat;
+background-position: left;
+}
+.active{
+ color: navy;
+}
 .jumbotron {
   background-color: navy;
   color: white;
