--- a/css/signup.css
+++ b/css/signup.css
@@ -32,7 +32,8 @@ button:focus {
 
 ::-webkit-input-placeholder{
   color:  rgb(8, 0, 0);
-}<button type="button" class="signup-btn">Login</button><button type="button" class="signup-btn">Login</button>
+}
+
 
 ::-webkit-input-placeholder .input-line:focus +::input-placeholder {
   color: #fff;
@@ -87,6 +88,7 @@ button:focus {
     font-size: 2.5rem;
     letter-spacing: 0px;
     letter-spacing: 0.05rem;
+    color:white;
 }
 
 .subtitle {
@@ -95,6 +97,7 @@ button:focus {
     font-weight: 100;
     letter-spacing: 0px;
     letter-spacing: 0.02rem;
+    color:white;
 }
 
 .bold-line {
