--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -40,3 +40,10 @@ h2, h3 {
     text-decoration: underline;
     font-size: 20px;
 }
+
+button {
+    background-color:whitesmoke;
+}
+button:hover {
+    background-color: brown;
+}
