--- a/css/services.css
+++ b/css/services.css
@@ -5,10 +5,15 @@ body{
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-background-image: url("/images/bestspa.jpg");
+background-image: url("/images/venue.jpg");
 background-size: cover;
 background-repeat: no-repeat;
 background-position: left;
+color:white
+}
+.list{
+  font-size: larger;
+  color:rgb(11, 247, 235)
 }
 .active{
  color: navy;
