--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,11 @@
 body {
-    /* background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSiuBbbIONAZl9yyYkjUdWH4HTSNMkQkw9cLjCv_vK6dHqMBsroNA); */
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSiuBbbIONAZl9yyYkjUdWH4HTSNMkQkw9cLjCv_vK6dHqMBsroNA);
     font-family: serif;
     font-weight: lighter;
     font-style: italic;
-    background: url(https://images.pexels.com/photos/705255/pexels-photo-705255.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
-    background-size: cover;
+    /* background: url(https://images.pexels.com/photos/705255/pexels-photo-705255.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940); */
 }
 
-.carousel-inner {
-    background: url(https://images.pexels.com/photos/705255/pexels-photo-705255.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
-}
 
 h1 {
     color: #000;
@@ -37,7 +33,7 @@ h3 {
 }
 
 .info {
-    background-image: url("https://i.pinimg.com/564x/17/30/f8/1730f8f73925921c50b9a0ffdbeb4c01.jpg");
+    /* background-image: url("https://i.pinimg.com/564x/17/30/f8/1730f8f73925921c50b9a0ffdbeb4c01.jpg"); */
     background-size: inherit;
 }
 
