Change color of anchor tags to make it visible

--- a/css/services.css
+++ b/css/services.css
@@ -16,7 +16,7 @@ color:white
   color:rgb(11, 247, 235)
 }
 .active{
- color: navy;
+ color: rgb(11, 247, 235);
 }
 .jumbotron {
   background-color: navy;
